[package]
name = "klavier"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
bytes = "1.10.1"
clap = { version = "4.5.51", features = ["derive"] }
csv = "1.4.0"
http = "1.3.1"
polars = { version = "0.51.0", features = ["lazy"] }
rand = "0.9.2"
reqwest = "0.12.22"
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread"] }
toml = "0.9.5"
